--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,5 @@ before_install:
     - cd ..
     - export PKG_CONFIG_PATH=$(pwd)/deps/lib/pkgconfig:$PKG_CONFIG_PATH
     - export LD_LIBRARY_PATH=$(pwd)/deps/lib:$LD_LIBRARY_PATH
-install:
-    - go get github.com/openvenues/gopostal
 script:
-    - go test github.com/openvenues/gopostal/...
+    - go test -v github.com/openvenues/gopostal/...
